# proposals

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: gitleaks.yml
THERAPY/: .latexmkrc  bibliography.bib  preamble.tex  proposal.tex
THERAPY/assets/images/: data-table.csv  mh_access_by_state.csv  research_context.tex
THERAPY/sections/: THERAPY.ipynb  executive_summary.tex  features.tex  overdose_by_state.csv  problem_statement.tex  research_context.tex  roadmap.tex  solution.tex  sponsorship.tex  title.tex  user_journey.tex
data/processed/: README.md  merged.csv
data/raw/: README.md  cdc_places_sample.csv  kaggle_mental_health_sample.csv  mha_state_county_sample.csv  modma_sample.csv  samhsa_sample.csv
docs/: index.html
drafts/: proposal.md  proposal_v0.0.1.md  sow.md
scripts/: example_usage.py  generate_report.py  preprocess_and_merge.py
src/mental_health_proposal/: __init__.py  analysis.py  ingest.py  integrate.py  pipeline.py  visuals.py
